--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js -a 'string'"
+    "start": "node app.js -a 'string'"
   },
   "author": "kamal",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "request": "^2.87.0",
     "yargs": "^11.0.0"
   }
 }
